--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "express": "~3.2.5",
     "mongoose": ">= 3.6.11"
   },
   "repository": {
